fix: 더미변수 주입 및 Hibernate 초기화 방식 수정